test_suite/alan-2022-examples/failing/004310_mutation.alan
source lA6 begin leave; leave <= end
